--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -12,18 +12,36 @@ jobs:
     - name: Checkout Code
       uses: actions/checkout@v3
 
+ 
     - name: Login to Docker Hub
-      run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+      uses: docker/login-action@v3
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
 
     - name: Build and Push Backend
-      run: |
-        docker build -t your-dockerhub-username/backend:v1 ./backend
-        docker push your-dockerhub-username/backend:v1
+      uses: docker/build-push-action@v5
+      with:
+        context: ./backend 
+        file: ./backend/Dockerfile 
+        push: true 
+        tags: |
+          your-dockerhub-username/backend:v1
+          your-dockerhub-username/backend:${{ github.sha }} # Recommended: Use commit SHA for unique tags
+
 
     - name: Build and Push Frontend
-      run: |
-        docker build -t your-dockerhub-username/frontend:v1 ./frontend
-        docker push your-dockerhub-username/frontend:v1
+      uses: docker/build-push-action@v5
+      with:
+        context: ./frontend 
+        file: ./frontend/Dockerfile
+        push: true
+        tags: |
+          your-dockerhub-username/frontend:v1
+          your-dockerhub-username/frontend:${{ github.sha }} # Recommended: Use commit SHA for unique tags
 
     - name: Deploy on Remote Server via SSH
       uses: appleboy/ssh-action@v1.0.3
@@ -32,7 +50,6 @@ jobs:
         username: ${{ secrets.SERVER_USER }}
         key: ${{ secrets.SERVER_SSH_KEY }}
         script: |
-          cd /path/to/project
-          git pull origin main
-          docker-compose down
-          docker-compose up -d
+   #           git clone
+   #            cd 
+               
